--- a/11_read_ptr1/Makefile
+++ b/11_read_ptr1/Makefile
@@ -1,4 +1,2 @@
-test: test.o
-    gcc -o test test.o
-test.o: test.c stdio.h stdlib.h
-    gcc -std=gnu99 -pedantic -wall -c test.c
+test: test.c
+	gcc -o -Wall -Werror -std=gnu99 -pedantic test.c
